set up local storage

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <div class="card-author">Harper Lee</div>
                     <div class="card-pages">342 Pages</div>
                     <div class="card-language">English</div>
-                    <div class="read-it">Read</div>
-                    <div class="trash-btn"><i class="fas fa-trash"></i></div>
+                    <div class="example-read">Read</div>
+                    <div class="example-trash"><i class="fas fa-trash"></i></div>
                 </div>
             </div>
 
